Fix typos of IOCCC

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 Welcome, {{ user }}!<br>
 {% endif %}
         <br>
-        Use this page to upload or update your IOTCC entries.<br>
+        Use this page to upload or update your IOCCC entries.<br>
       </strong> </section>
     <section id="pageContent">
       <main role="main">
@@ -67,7 +67,7 @@ Welcome, {{ user }}!<br>
       </aside>
     </section>
     <footer>
-      <p>© IOTCC 2022, | powered by | <a href="https://html5-templates.com/" target="_blank"
+      <p>© IOCCC 2022, | powered by | <a href="https://html5-templates.com/" target="_blank"
           rel="nofollow">HTML5
           Templates</a></p>
       <address> Contact: <a href="mailto:ioccc@ioccc.org">Mail me</a> </address>
