--- a/templates/index.html
+++ b/templates/index.html
@@ -74,8 +74,8 @@ Welcome, {{ user }}!<br>
         </article>
       </main>
       <aside>
-        <div>Submissions may be updated at any time prior to 12 February 2022
-          00:00:00 GMT. </div>
+        <div>Submissions may be updated at any time prior to {{date}}
+          GMT. </div>
       </aside>
     </section>
     <footer>
