change email to contact page

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@ Welcome, {{ user }}!<br>
       <p>© IOCCC 2022, | powered by | <a href="https://html5-templates.com/" target="_blank"
           rel="nofollow">HTML5
           Templates</a></p>
-      <address> Contact: <a href="mailto:ioccc@ioccc.org">Mail me</a> </address>
+      <address> How to <a href="https://ioccc-src.github.io/temp-test-ioccc/contact.html">contact the IOCCC</a> </address>
     </footer>
   </body>
 </html>
