--- a/templates/re-confirm.html
+++ b/templates/re-confirm.html
@@ -41,10 +41,33 @@
       </aside>
     </section>
     <footer>
-      <p>© IOCCC 2022, | powered by | <a href="https://html5-templates.com/" target="_blank"
-          rel="nofollow">HTML5
-          Templates</a></p>
-      <address> Contact: <a href="mailto:ioccc@ioccc.org">Mail me</a> </address>
+      <div id="resources"><h3>Recommended IOCCC resources:</h3>
+      <ul>
+	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/index.html">IOCCC Home page</a>
+	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/status.html">Current status of the IOCCC</a>
+	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/next/index.html">IOCCC Rules &amp; Guidelines</a>
+	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/faq.html">IOCCC FAQ</a>
+	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/contact.html">How to contact the IOCCC</a>
+      </ul>
+      </div>
+      <div id="copyright"><h3>Copyright &copy; 2024 by Landon Curt Noll.
+	 <a href="https://creativecommons.org/faq/#what-does-some-rights-reserved-mean"
+	    rel="license noopener noreferrer">Some Rights Reserved</a></b>.</h3>
+      <p>This work is licensed by Landon Curt Noll under:
+          <b><a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1"
+	     target="_blank" rel="license noopener noreferrer"
+	     style="display:inline-block;">CC BY-SA 4.0</a></b>.</p>
+      <p>You should <b>carefully review</b> the
+	  <b><a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode.en"
+	      rel="license noopener noreferrer">CC BY-SA 4.0 LEGAL CODE</a></b>
+	 before using the licensed material.</p>
+      <p>You may wish to review the
+      <b><a href="https://ioccc-src.github.io/temp-test-ioccc/license.html"
+            rel="license noopener noreferrer">highlights of some of the key features and terms</a></b>.</p>
+      </div>
+      <div id="powered-by"><h4>Powered by:
+         <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></h4>
+      </div>
     </footer>
   </body>
 </html>
