--- a/templates/admin.html
+++ b/templates/admin.html
@@ -84,7 +84,7 @@ Welcome, {{ user }}!<br>
       </main>
     </section>
     <footer>
-      <div id="resources"><h3>Recommended IOCCC resources:</h3>
+      <div id="resources"><h3>Recommended IOCCC resources</h3>
       <ul>
 	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/index.html">IOCCC Home page</a>
 	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/status.html">Current status of the IOCCC</a>
@@ -93,23 +93,29 @@ Welcome, {{ user }}!<br>
 	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/contact.html">How to contact the IOCCC</a>
       </ul>
       </div>
-      <div id="copyright"><h3>Copyright &copy; 2024 by Landon Curt Noll.
+      <div id="copyright"><h3>Copyright &copy; 2024 by Landon Curt Noll:
 	 <a href="https://creativecommons.org/faq/#what-does-some-rights-reserved-mean"
-	    rel="license noopener noreferrer">Some Rights Reserved</a></b>.</h3>
-      <p>This work is licensed by Landon Curt Noll under:
+	    target="_blank"
+	    rel="license noopener noreferrer">Some Rights Reserved</a></h3>
+      <p>This work is licensed by Landon Curt Noll under
           <b><a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1"
-	     target="_blank" rel="license noopener noreferrer"
-	     style="display:inline-block;">CC BY-SA 4.0</a></b>.</p>
+		target="_blank"
+		rel="license noopener noreferrer"
+		style="display:inline-block;">CC BY-SA 4.0</a></b>.</p>
       <p>You should <b>carefully review</b> the
 	  <b><a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode.en"
-	      rel="license noopener noreferrer">CC BY-SA 4.0 LEGAL CODE</a></b>
+		target="_blank"
+	        rel="license noopener noreferrer">CC BY-SA 4.0 LEGAL CODE</a></b>
 	 before using the licensed material.</p>
       <p>You may wish to review the
       <b><a href="https://ioccc-src.github.io/temp-test-ioccc/license.html"
+	    target="_blank"
             rel="license noopener noreferrer">highlights of some of the key features and terms</a></b>.</p>
       </div>
       <div id="powered-by"><h4>Powered by:
-         <a href="https://html5-templates.com/" target="_blank" rel="nofollow">HTML5 Templates</a></h4>
+         <a href="https://html5-templates.com/"
+	    target="_blank"
+	    rel="nofollow">HTML5 Templates</a></h4>
       </div>
     </footer>
   </body>
