--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,15 +4,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The IOCCC Admin Page</title>
-    <meta name="description" content="File uploader for contestant entries">
+    <title>IOCCC Admin Page</title>
+    <meta name="description" content="Admin page for IOCCC judges">
     <link rel="stylesheet" href="static/ioccc.css">
     <script src="static/ioccc.js" defer></script>
   </head>
   <body>
     <header>
-      <div id="logo"><img src="static/ioccc.png">
-        International Obfuscated C Code Contest Admin Page</div>
+      <div id="logo"><img src="static/ioccc.png"> IOCCC Admin Page</div>
     </Header>
     <section>
       <strong>
