--- a/templates/closed.html
+++ b/templates/closed.html
@@ -4,14 +4,13 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The IOCCC Contest is Closed</title>
-    <meta name="description" content="File uploader for contestant entries">
+    <title>The IOCCC is Closed</title>
+    <meta name="description" content="IOCCC is closed">
     <link rel="stylesheet" href="static/ioccc.css">
   </head>
   <body>
     <header>
-      <div id="logo"><img src="static/ioccc.png">
-        International Obfuscated C Code Contest Contestant Page</div>
+      <div id="logo"><img src="static/ioccc.png"> IOCCC is Closed</div>
     </header>
     <section>
       <h2>The contest is closed.</h2>
