--- a/templates/register.html
+++ b/templates/register.html
@@ -11,8 +11,7 @@
   </head>
   <body>
     <header>
-      <div id="logo"><img src="static/ioccc.png"> International
-        Obfuscated C Code Contest Registration</div>
+      <div id="logo"><img src="static/ioccc.png"> IOCCC Registration</div>
     </header>
     <section> <strong> Register here for the IOCCC. </strong> </section>
     <section><strong>
@@ -52,7 +51,7 @@
         </article>
       </main>
       <aside>
-        <div>Submissions may be updated at any time prior to {{date}} GMT. </div>
+        <div>Submissions may be updated at any time prior to {{date}} UTC. </div>
       </aside>
     </section>
     <footer>
