--- a/templates/closed.html
+++ b/templates/closed.html
@@ -13,6 +13,10 @@
       <div id="logo"><img src="static/ioccc.png"> IOCCC is Closed</div>
     </header>
     <section>
+      <form action="/logout" method="get" target="_self">
+	  <button type="submit" formmethod="get" class="button">Logout</button>
+      </form>
+      <br>
       <h2>The contest is closed.</h2>
       Wait by your phone, check at the results page, or otherwise
       go do something else.  We're closed.  Nobody home.  Gone
