--- a/templates/re-confirm.html
+++ b/templates/re-confirm.html
@@ -31,6 +31,10 @@
     <section id="pageContent">
       <main role="main">
         <article>
+	  <form action="/logout" method="get" target="_self">
+	      <button type="submit" formmethod="get" class="button">Logout</button>
+	  </form>
+	  <br>
 	  Thank you for registering.  Eventually a confirmation email
 	  will appear in your inbox with further instructions.
         </article>
