--- a/templates/admin.html
+++ b/templates/admin.html
@@ -39,18 +39,20 @@ Welcome, {{ user }}!<br>
           <form name="contestants" action="admin-update" method="post"><br>
         <article>
 	  <h2>Contest State</h2>
-	    The contest opens on 
-  	  <input id="opendate" type="date" name="opendate"
+	    The contest opens on
+	  <input id="opendate" type="date" name="opendate"
 		 value="{{opdate}}" onclick="show_sub()">
-	  and closes on 
-  	  <input id="closedate" type="date" name="closedate"
+	  and closes on
+	  <input id="closedate" type="date" name="closedate"
 		 value="{{cldate}}" onclick="show_sub()">
-            <h2>Select entry to update/modify:</h2>
-            <p>
-	      <table>
+	    <br>
+	    <br>
+            <p id="labelFont"><b>Select</b> Username to Delete:</p>
+	    <br>
+	    <table>
 		<tr>
-		  <th>Contestant Name</th>
-		  <th>Delete?</th>
+		  <th>Username</th>
+		  <th>Delete</th>
 		</tr>
 		{% for key in contestants %}
 		<tr>
@@ -67,18 +69,21 @@ Welcome, {{ user }}!<br>
 		<tr>
 	      </table>
             <br>
-	    Add User: <input type="text" size="40" id="newuser" name="newuser"
+	    <p id="labelFont"><b>Add</b> User: <input type="text" size="40" id="newuser" name="newuser"
 			     pattern="[a-zA-Z0-9.@_\-+]+"
-			     oninput="show_sub();">
-            <br>
-            <br>
-            <button type="reset" onclick="hide_sub()">Reset </button> <button
-              type="submit"
-              style="display: none"
-              id="sub_button">
-              Submit</button> </form>
-          <p><br>
-          </p>
+			     oninput="show_sub();"></p>
+	    <br>
+	    <p id="labelFont"><label><b>Then:</b> Click:</label>
+	    <button type="submit" style="display: none" id="sub_button" class="button">Submit</button></p>
+	    <br>
+	    <p id="labelFont"><label><b>Else:</b> Click:</label>
+            <button type="reset" onclick="hide_sub()" class="button">Reset</button></p>
+	  </form>
+	  <br>
+	  <form action="/logout" method="get" target="_self">
+	      <p id="labelFont"><label><b>Last:</b> Click:</label>
+	      <button type="submit" formmethod="get" class="button">Logout</button></p>
+	  </form>
         </article>
       </main>
     </section>
