--- a/templates/admin.html
+++ b/templates/admin.html
@@ -19,7 +19,7 @@
 Welcome, {{ user }}!<br>
 {% endif %}
         <br>
-        Use this page to add/delete contestants, retrieve entries,
+        Use this page to add/delete contestants, retrieve submissions,
 	open or close the contest.<br>
       </strong> </section>
     {% with messages = get_flashed_messages() %}
