--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@ Welcome, {{ user }}!<br>
 		    <label for="en{{key}}">{{key}}</label>
 		  </td>
 		  <td>
-		    <input name="entry_no" id="entry{{key}}"
+		    <input name="slot_num" id="slots{{key}}"
 			   onclick="show_sub();" type="radio"
 			   value="{{key}}">
 		  </td>
