add some render_template fixup
These changes were done using the call of 2024 Oct 26.

--- a/templates/protected_page.html
+++ b/templates/protected_page.html
@@ -1,8 +1,8 @@
 
 <h1><b>{{ page_name }}</b></h1> 
 <div style="padding: 10px 10px">
-    {% if current_user.id %}
-    Status: Logged in as <b style="color: green ">{{ current_user.id }}</b>
+    {% if username %}
+    Status: Logged in as <b style="color: green ">{{ username }}</b>
     {% else %}
     Status: <i style="color: gray">Not logged in</i>
   {% endif %}
