--- a/templates/page.html
+++ b/templates/page.html
@@ -3,7 +3,7 @@
 
 <div style="padding: 10px 10px">
   {% if current_user.id %}
-  Status: Logged in as <b style="color: green ">{{ current_user.id }}</b>
+  Status: Logged in as <b style="color: green ">{{ username }}</b>
   {% else %}
   Status: <i style="color: gray">Not logged in</i>
 {% endif %}
