checkpoint first successful use of flask-login
Changed from old flash Basic-Auth to flash-login.

Rename `etc/lock.iocccpasswd.json` -> `etc/iocccpasswd.lock`.
Rename `etc/lock.state.json` -> `etc/state.lock`.
Update `Dockerfile` accordingly.

Improve and fix permissions set by `Dockerfile`.

Changed `ioccc_common.py` VERSION_IOCCC_COMMON from "1.1.1 2024-10-28"
to "1.2 2024-11-01".

Changed `ioccc_passwd.py` VERSION from "1.2 2024-10-28"
to "1.3 2024-11-01".

Changed `ioccc.py` VERSION from "0.7 2024-10-30"
to "1.0 2024-11-01".

Changed `Dockerfile` VERSION from "0.4.8 2024-10-30"
to "0.5 2024-11-01".

Removed `OLD-*` files.  Removed demo templates.

Improved `README.md` information order.

Improved / fixed comments.

Improved for error message format left behind for `return_last_errmsg()`.

Re-enable pylint items after the end of the function where they were disabled.

Add test used `12345678-1234-4321-abcd-1234567890ab` to `etc/init.iocccpasswd.json`.

Tested `ioccc.py` for flask-login and slot submits.

Tested docker container for page logins.

TODO: Make the repo public.

TODO: Import `ioccc_common.py` w/o wildcard, and fix related pylint lines.

TODO: Change login page to use the style of the submit template.

TODO: Add log file.

TODO: Write tool to change the status of a `slot.json` file.

TODO: Write tool to change open/close date.  Remove -s and -S from `ioccc_passwd.py`.

TODO: Allow code outside of the Docker contained to modify files under
      `etc/` and `users`/.

--- a/templates/closed.html
+++ b/templates/closed.html
@@ -18,9 +18,7 @@
       </form>
       <br>
       <h2>The contest is closed.</h2>
-      Wait by your phone, check at the results page, or otherwise
-      go do something else.  We're closed.  Nobody home.  Gone
-      fishing.  Flossing the cat.
+      Sorry (tm Canada 🇨), the IOCCC is closed.
     </section>
     <footer>
       <div id="resources"><h3>Recommended IOCCC resources</h3>
