--- a/templates/submit.html
+++ b/templates/submit.html
@@ -4,28 +4,27 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IOCCC Admin Page</title>
-    <meta name="description" content="Admin page for IOCCC judges">
+    <title>IOCCC Submission Page</title>
+    <meta name="description" content="Upload submissions to the IOCCC">
     <link rel="stylesheet" href="static/ioccc.css">
     <script src="static/ioccc.js" defer></script>
   </head>
   <body>
     <header>
-      <div id="logo"><img src="static/ioccc.png"> IOCCC Admin Page</div>
-    </Header>
+      <div id="logo"><img src="static/ioccc.png"> Upload your submission(s) to the IOCCC</div>
+    </header>
     <section>
       <strong>
-{% if user %}
-Welcome, {{ user }}!<br>
+{% if username %}
+Welcome, {{ username }}!<br>
 {% endif %}
         <br>
-        Use this page to add/delete contestants, retrieve submissions,
-	open or close the contest.<br>
+        Use this page to upload or update your submissions to the IOCCC.<br>
       </strong> </section>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <section>
-      <strong>Error(s):</strong>
+      <strong>Message(s):</strong>
     <ul class=flashes>
     {% for message in messages %}
       <li>{{ message }}</li>
@@ -36,45 +35,64 @@ Welcome, {{ user }}!<br>
     {% endwith %}
     <section id="pageContent">
       <main role="main">
-          <form name="contestants" action="admin-update" method="post"><br>
         <article>
-	  <h2>Contest State</h2>
-	    The contest opens on
-	  <input id="opendate" type="date" name="opendate"
-		 value="{{opdate}}" onclick="show_sub()">
-	  and closes on
-	  <input id="closedate" type="date" name="closedate"
-		 value="{{cldate}}" onclick="show_sub()">
-	    <br>
-	    <br>
-            <p id="labelFont"><b>Select</b> Username to Delete:</p>
-	    <br>
-	    <table>
+          <p id="labelFont"><b>First:</b> Select a slot:</p>
+          <form name="upload" action="update" method="post" enctype="multipart/form-data"><br>
+	      <table>
 		<tr>
-		  <th>Username</th>
-		  <th>Delete</th>
+		  <th style="width:5%">Select</th>
+		  <th>Slot Information</th>
 		</tr>
-		{% for key in contestants %}
+		{% for slot in etable %}
 		<tr>
 		  <td>
-		    <label for="ct">{{key}}</label>
+		      <label for="en{{slot.slot}}"><b>{{slot.slot}}:</b>&nbsp;</label>
+			<input name="slot_num" id="slots{{slot.slot}}"
+			       onclick="show_sub();" type="radio"
+			       value="{{slot.slot}}">
 		  </td>
 		  <td>
-		    <input name="contest[{{loop.index}}]"
-			   id="ct[{{loop.index}}]"
-			   onclick="show_sub();" type="checkbox"
-			   value="{{key}}">
+		      <b>Status</b>: {{slot.status}}<br>
+		      {% if slot.filename %}
+		      <br><b>Filename</b>: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{slot.filename}}<br>
+		      {% endif %}
+		      {% if slot.length %}
+		      <b>File length</b>: &nbsp;&nbsp;&nbsp; {{slot.length}}<br>
+		      {% endif %}
+		      {% if slot.date %}
+		      <b>Upload date</b>: &nbsp; {{slot.date}}<br>
+		      {% endif %}
+		      {% if slot.sha256 %}
+		      <br><b>SHA256</b>: {{slot.sha256}}<br>
+		      {% endif %}
 		  </td>
+		</tr>
 		{% endfor %}
-		<tr>
 	      </table>
+	      </p>
             <br>
-	    <p id="labelFont"><b>Add</b> User: <input type="text" size="40" id="newuser" name="newuser"
-			     pattern="[a-zA-Z0-9.@_\-+]+"
-			     oninput="show_sub();"></p>
+            <br>
+	    <p><b>IMPORTANT:</b> Upload <b>only XZ compressed tarballs</b> whose <b>filename is</b>:</p>
 	    <br>
-	    <p id="labelFont"><label><b>Then:</b> Click:</label>
-	    <button type="submit" style="display: none" id="sub_button" class="button">Submit</button></p>
+	    <p><code><b>&nbsp;&nbsp;&nbsp;&nbsp;submit.{{username}}-<i>SLOT</i>.<i>TIMESTAMP</i>.txz</b></code></p>
+	    <br>
+	    <p>where <code><b><i>SLOT</i></b></code> is a slot number, and <code><b><i>TIMESTAMP</i></b></code>
+	    is the build time as a <a href="https://unixtime.org">Unix timestamp</a>.</p>
+	    <br>
+	    <p>We <b>highly recommend</b> that you use
+	    <a href="https://github.com/ioccc-src/mkiocccentry">mkiocccentry(1)</a>
+	    to create your submit file as it <b>must pass</b> the
+	    <a href="https://github.com/ioccc-src/mkiocccentry">txzchk(1)</a> sanity check,
+	    and when the uncompressed tarball is untarred, the resulting directory <b>must pass</b>
+	    <a href="https://github.com/ioccc-src/mkiocccentry">chkentry(1)</a>.</p>
+	    <br>
+	    <p id="labelFont"><label for="file"><b>Second:</b></label>
+	    <input name="file" id="file" required="" type="file" class="button" style="min-width: 700px;"></p>
+	    <br>
+	    <p id="labelFont"><label><b>Third:</b> Click:</label>
+	    <button type="submit" style="display: none" id="sub_button" class="button">Submit</button>
+	    <div font="-2">(Submit button will appear once a slot is selected)</div>
+	    </p>
 	    <br>
 	    <p id="labelFont"><label><b>Else:</b> Click:</label>
             <button type="reset" onclick="hide_sub()" class="button">Reset</button></p>
@@ -84,6 +102,9 @@ Welcome, {{ user }}!<br>
 	      <p id="labelFont"><label><b>Last:</b> Click:</label>
 	      <button type="submit" formmethod="get" class="button">Logout</button></p>
 	  </form>
+	  <p>
+	  <br><b>IMPORTANT</b>: Submissions may be updated at any time prior to <b>{{date}} UTC</b>.<br>
+	  <p>
         </article>
       </main>
     </section>
