--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
-<h1 style= "padding: 0px; margin: 0px;line-height: 100%">Login/Logout Website Example</h1>
-<h4 style= "padding: 0px 10px; margin: 0px;line-height: 100%">Flask-login, no Flask-sqlalchemy</h4>
+<h1 style= "padding: 0px; margin: 0px;line-height: 100%">IOCCC submit server</h1>
+<h4 style= "padding: 0px 10px; margin: 0px;line-height: 100%">Login to submit</h4>
 
 <div style="padding: 10px 10px">
   {% if current_user.id %}
