--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,80 @@
-<h1 style= "padding: 0px; margin: 0px;line-height: 100%">IOCCC submit server</h1>
-<h4 style= "padding: 0px 10px; margin: 0px;line-height: 100%">Login to submit</h4>
+<!DOCTYPE html>
+<html class="no-js" lang="en">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IOCCC Submission Page</title>
+    <meta name="description" content="Upload submissions to the IOCCC">
+    <link rel="stylesheet" href="static/ioccc.css">
+    <script src="static/ioccc.js" defer></script>
+  </head>
+  <body>
+    <header>
+      <div id="logo" style="color: black;"><img src="static/ioccc.png">
+	IOCCC Submit Server - Login to submit
+      </div>
+    </header>
 
-<div style="padding: 10px 10px">
-  {% if current_user.id %}
-  Status: Logged in as <b style="color: green ">{{ current_user.id }}</b>
-  {% else %}
-  Status: <i style="color: gray">Not logged in</i>
-{% endif %}
-</div>
+    <section id="pageContent">
+      <main role="main">
+        <article>
 
-  <form method="POST" action="">
-    <label for="username">username:</label>
-    <input type="text" id="username" name="username"><br><br>
-    <label for="password">Password:</label>
-    <input type="text" id="password" name="password"><br><br>
-    <input type="submit" value="Login" style="background-color:darkgray">
-  </form> 
+	  <div>
+	    {% if current_user.id %}
+	      <b style="color: green;">Status: Logged in as {{ current_user.id }}</b><br><br>
+	    {% else %}
+	      <b style="font-size: 20px;">Status: Not logged in</b><br><br>
+	    {% endif %}
+	  </div>
 
-</div>
+	  <form method="POST" action="">
+	    <label for="username"><b style="font-size: 20px;">Username: </b></label>
+	    <input type="text" id="username" name="username" style="background-color:#AEC6CF; min-width:30%;"><br><br>
+	    <label for="password"><b style="font-size: 20px;">Password: </b></label>
+	    <input type="text" id="password" name="password" style="background-color:#AEC6CF; min-width:30%;"><br><br>
+	    <input type="submit" value="Login" class="button"
+		   style="background-color:#AEC6CF; min-width:100px; font-size: 20px; font-weight: bold;">
+	   </form>
+
+	  <p>
+        </article>
+      </main>
+    </section>
+    <footer>
+      <div id="resources"><h3>Recommended IOCCC resources</h3>
+      <ul>
+	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/index.html">IOCCC Home page</a>
+	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/status.html">Current status of the IOCCC</a>
+	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/next/index.html">IOCCC Rules &amp; Guidelines</a>
+	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/faq.html">IOCCC FAQ</a>
+	 <li> <a href="https://ioccc-src.github.io/temp-test-ioccc/contact.html">How to contact the IOCCC</a>
+      </ul>
+      </div>
+      <div id="copyright"><h3>Copyright &copy; 2024 by Landon Curt Noll:
+	 <a href="https://creativecommons.org/faq/#what-does-some-rights-reserved-mean"
+	    target="_blank"
+	    rel="license noopener noreferrer">Some Rights Reserved</a></h3>
+      <p>This work is licensed by Landon Curt Noll under
+          <b><a href="https://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1"
+		target="_blank"
+		rel="license noopener noreferrer"
+		style="display:inline-block;">CC BY-SA 4.0</a></b>.</p>
+      <p>You should <b>carefully review</b> the
+	  <b><a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode.en"
+		target="_blank"
+	        rel="license noopener noreferrer">CC BY-SA 4.0 LEGAL CODE</a></b>
+	 before using the licensed material.</p>
+      <p>You may wish to review the
+      <b><a href="https://ioccc-src.github.io/temp-test-ioccc/license.html"
+	    target="_blank"
+            rel="license noopener noreferrer">highlights of some of the key features and terms</a></b>.</p>
+      </div>
+      <div id="powered-by"><h4>Powered by:
+         <a href="https://html5-templates.com/"
+	    target="_blank"
+	    rel="nofollow">HTML5 Templates</a></h4>
+      </div>
+    </footer>
+  </body>
+</html>
