update for basic functionality
Added `ioccc_date.py` to set and read the IOCCC start and end dates.
Removed that functionality from `ioccc_passwd.py`.

Generalized and improved the file locking mechanism in `ioccc_passwd.py`
that is now used for any lock file (not just slot lock files).
Now only `ioccc_passwd.py` performs file locking and unlocking.

Added code to `ioccc_passwd.py` mange slot status comments.

Fixed login, submit and update functionality in `ioccc.py`.

Clean up pylint statement enable and disable use.

Added `set_slot_status.py` to allow one to set the status comment
for a given user's slot.

Improved `templates/closed.html` message for when the IOCCC is closed.

The `templates/login.html` will now redirect to the submit page
if someone uses the back button to revisit the login page after login.

Fixed the `templates/submit.html` page indenting.

Fixed and improved the Flask-Login session management.

Changed `ioccc_passwd.py` VERSION from "1.3 2024-11-01"
to "1.3.1 2024-11-03".

Changed `ioccc_common.py` VERSION from "1.2,1 2024-11-02"
to "1.3 2024-11-09".

Changed `ioccc.py` VERSION from "1.0 2024-11-01"
to "1.1 2024-11-15".

Update `README.md` as per the above.

TODO: Implement forced password change functionality.

TODO: Write tool to move files out of a user's slot and update the
      slot's status comment.

TODO: Setup the docker container to allow for user account management,
      IOCCC start and stop date management, slot's status comment management,
      and moving files out of a slot by tools not in the docker container.
      I.e., make the `users` and `etc` directories writable from outside
      of the docker container.

TODO: More testing, particulally under a Docker container.

--- a/templates/closed.html
+++ b/templates/closed.html
@@ -18,7 +18,10 @@
       </form>
       <br>
       <h2>The contest is closed.</h2>
-      Sorry (tm Canada 🇨), the IOCCC is closed.
+      <br>
+      Sorry (tm Canada 🇨🇦), the IOCCC is closed.
+      <br><br>
+      You can no longer upload IOCCC submissions.
     </section>
     <footer>
       <div id="resources"><h3>Recommended IOCCC resources</h3>
