allow read-only login when the contest is not open
When the contest is not open, users can still login and see
the slot status but in a read-only mode.  In particular
they can no longer upload slot files when the contest is not open.

Changed `ioccc.py` VERSION from "1.1 2024-11-15"
to "1.2 2024-11-17".

Set the correct Docker permissions for `set_slot_status.py`.

Changed `Dockerfile` VERSION from "0.5.1 2024-11-02"
to "0.5.2 2024-11-17".

TODO: Implement forced password change functionality.

TODO: Write tool to move files out of a user's slot and update the
      slot's status comment.

TODO: Setup the docker container to allow for user account management,
      IOCCC start and stop date management, slot's status comment management,
      and moving files out of a slot by tools not in the docker container.
      I.e., make the `users` and `etc` directories writable from outside
      of the docker container.

TODO: More testing, particularly under a Docker container.

--- a/templates/not-open.html
+++ b/templates/not-open.html
@@ -4,25 +4,89 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The IOCCC is Closed</title>
-    <meta name="description" content="IOCCC is closed">
+    <title>IOCCC Submission Page</title>
+    <meta name="description" content="Upload submissions to the IOCCC">
     <link rel="stylesheet" href="static/ioccc.css">
+    <script src="static/ioccc.js" defer></script>
   </head>
   <body>
+
     <header>
-      <div id="logo"><img src="static/ioccc.png"> IOCCC is Closed</div>
+      <div id="logo"><img src="static/ioccc.png"> The IOCCC is NOT open</div>
     </header>
+
     <section>
-      <form action="/logout" method="get" target="_self">
-	  <button type="submit" formmethod="get" class="button">Logout</button>
-      </form>
+      <strong>
+      {% if username %}
+        <div style="font-size: 20px; color: darkblue;">Welcome, {{ username }}</div><br>
+      {% endif %}
+      <h2>The contest is NOT open for submissions.</h2>
       <br>
-      <h2>The contest is closed.</h2>
-      <br>
-      Sorry (tm Canada 🇨🇦), the IOCCC is closed.
+      Sorry (tm Canada 🇨🇦), the IOCCC is not open.
       <br><br>
-      You can no longer upload IOCCC submissions.
+      You cannot upload IOCCC submissions at this time.
+      </strong>
     </section>
+
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <section>
+          <strong>Message(s):</strong>
+	  <br><br>
+          <ul class=flashes>
+          {% for message in messages %}
+            <li>{{ message }}</li>
+          {% endfor %}
+        </ul>
+        </section>
+      {% endif %}
+    {% endwith %}
+
+    <section id="pageContent">
+      <main role="main">
+        <article>
+
+	  <table>
+	    <tr>
+	      <th style="width:5%">Slot</th>
+	      <th>Slot Information</th>
+	    </tr>
+	    {% for slot in etable %}
+	      <tr>
+		<td>
+		  <label for="en{{slot.slot}}"><b>{{slot.slot}}:</b>&nbsp;</label>
+		</td>
+		<td>
+		  <b>Status: </b><b style="color: darkblue; font-weight: bold;">{{slot.status}}</b><br>
+		  {% if slot.filename %}
+		    <br><b>Filename</b>: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{slot.filename}}<br>
+		  {% endif %}
+		  {% if slot.length %}
+		    <b>File length</b>: &nbsp;&nbsp;&nbsp; {{slot.length}}<br>
+		  {% endif %}
+		  {% if slot.date %}
+		    <b>Upload date</b>: &nbsp; {{slot.date}}<br>
+		  {% endif %}
+		  {% if slot.sha256 %}
+		    <br><b>SHA256</b>: {{slot.sha256}}<br>
+		  {% endif %}
+		</td>
+	      </tr>
+	    {% endfor %}
+	  </table>
+
+          <br>
+
+          <form action="/logout" method="get" target="_self">
+            <p id="labelFont">
+              <button type="submit" formmethod="get" class="button">Logout</button>
+            </p>
+          </form>
+
+        </article>
+      </main>
+    </section>
+
     <footer>
       <div id="resources"><h3>Recommended IOCCC resources</h3>
       <ul>
